Here's the commented version of the code:

```c++
// Copyright 2018 gRPC authors.

// Header guard to prevent multiple inclusions of this header file
#ifndef GRPC_SRC_CPP_SERVER_LOAD_REPORTER_CONSTANTS_H
#define GRPC_SRC_CPP_SERVER_LOAD_REPORTER_CONSTANTS_H

#include <grpc/support/port_platform.h>  // Platform-specific support macros
#include <stddef.h>                      // For size_t
#include <stdint.h>                      // For uint32_t

namespace grpc {
namespace load_reporter {

// Version number for the load reporter protocol
constexpr uint32_t kVersion = 15853;

// Time intervals for feedback sampling and fetching
constexpr uint32_t kFeedbackSampleWindowSeconds = 10;  // Feedback aggregation window
constexpr uint32_t kFetchAndSampleIntervalSeconds = 1;  // Sampling interval

// Length constants for various identifiers
constexpr size_t kLbIdLength = 8;           // Length of load balancer ID
constexpr size_t kIpv4AddressLength = 8;     // Length of IPv4 address string representation
constexpr size_t kIpv6AddressLength = 32;    // Length of IPv6 address string representation

// Special value indicating an invalid load balancer ID
constexpr char kInvalidLbId[] = "<INVALID_LBID_238dsb234890rb>";

// Constants representing call status categories
constexpr char kCallStatusOk[] = "OK";              // Successful calls
constexpr char kCallStatusServerError[] = "5XX";     // Server-side errors (500-599)
constexpr char kCallStatusClientError[] = "4XX";     // Client-side errors (400-499)

// Tag keys used for labeling metrics
constexpr char kTagKeyToken[] = "token";             // Authentication token tag
constexpr char kTagKeyHost[] = "host";               // Host identifier tag
constexpr char kTagKeyUserId[] = "user_id";          // User identifier tag
constexpr char kTagKeyStatus[] = "status";           // Call status tag
constexpr char kTagKeyMetricName[] = "metric_name";  // Metric name tag

// Metric measurement names
constexpr char kMeasureStartCount[] = "grpc.io/lb/start_count";          // Count of started calls
constexpr char kMeasureEndCount[] = "grpc.io/lb/end_count";              // Count of completed calls
constexpr char kMeasureEndBytesSent[] = "grpc.io/lb/bytes_sent";         // Bytes sent in calls
constexpr char kMeasureEndBytesReceived[] = "grpc.io/lb/bytes_received"; // Bytes received in calls
constexpr char kMeasureEndLatencyMs[] = "grpc.io/lb/latency_ms";         // Call latency in milliseconds
constexpr char kMeasureOtherCallMetric[] = "grpc.io/lb/other_call_metric"; // Generic call metric

// View names for aggregated metrics
constexpr char kViewStartCount[] = "grpc.io/lb_view/start_count";          // View of started calls
constexpr char kViewEndCount[] = "grpc.io/lb_view/end_count";              // View of completed calls
constexpr char kViewEndBytesSent[] = "grpc.io/lb_view/bytes_sent";         // View of bytes sent
constexpr char kViewEndBytesReceived[] = "grpc.io/lb_view/bytes_received";  // View of bytes received
constexpr char kViewEndLatencyMs[] = "grpc.io/lb_view/latency_ms";         // View of call latency
constexpr char kViewOtherCallMetricCount[] = "grpc.io/lb_view/other_call_metric_count";  // View of generic metric count
constexpr char kViewOtherCallMetricValue[] = "grpc.io/lb_view/other_call_metric_value";  // View of generic metric value

}  // namespace load_reporter
}  // namespace grpc

#endif  // GRPC_SRC_CPP_SERVER_LOAD_REPORTER_CONSTANTS_H
```

The comments explain:
1. The purpose of each constant
2. The units where applicable (seconds, milliseconds)
3. The meaning of status codes and tag keys
4. The relationship between measurement names and their corresponding views
5. The organization of the constants into logical groups (protocol version, timing parameters, length constants, status codes, tags, measurements, and views)

The comments are designed to help future developers understand:
- What each constant represents
- How the constants are used in the load reporting system
- The relationship between different constants
- The expected values and formats of the constants